--- a/header.html
+++ b/header.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="css/pagina.css">
+		<link rel="icon" type="imagem/png" href="/images/logo.png" />
 	</head>
 	<header>
 		<div class="title">
