--- a/header.html
+++ b/header.html
@@ -5,6 +5,9 @@
 		<link rel="stylesheet" type="text/css" href="css/pagina.css">
 		<link rel="icon" type="imagem/png" href="/images/logo.png" />
 	</head>
+
+	<script src="js/facebook.js"></script>
+
 	<header>
 		<div class="title">
 			1.MyTodo
@@ -24,18 +27,21 @@
 					</li>
 
 					<li>
-						<a href="ajuda.php" class="botaomenu"> <!-- LEMBRAR DE COLOCAR O LINK AQUI -->
+						<a href="ajuda.php" class="botaomenu"> 
 							AJUDA
 						</a>
 					</li>
 
 					<li>
-						<a href="control/control.php?action=logout" class="botaomenu"> <!-- LEMBRAR DE COLOCAR O LINK AQUI -->
+						<a href="control/control.php?action=logout" class="botaomenu">
 							LOGOUT
 						</a>
 					</li>
+					<li>
+						<a href="" onclick="FB.logout()" class="botaomenu" style="color: rgb(66, 103, 178)">SAIR</a>
+					</li>		
 					<li></li>
-					<a href="settings.php"><img src="images/settings2.png" class="imgFooter"></a> <!-- LEMBRAR DE COLOCAR O LINK AQUI -->
+					<a href="settings.php"><img src="images/settings2.png" class="imgFooter"></a> 
 				</ul>
 			</div>
 		</div>
